names and schedule

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "White Rose Analytics 1"
+title: "SETAC Student Conference 2025"
 toc: true
 toc-location: right
 editor: 
@@ -9,13 +9,13 @@ editor:
 
 # Introduction to Reproducibility with R
 
-Training for first year PhD students on the White Rose Universities
-(York, Sheffield, Leeds) DTP in Mechanistic Biology. It is designed and
-delivered by Emma Rand of The University of York.
+Training workshop for the SETAC 13th Young Environmental Scientists
+Meeting 2025-08-12. It is designed and delivered by Emma Rand of The
+University of York.
 
 ## Overview
 
-An increase in the complexity, and scale, of biological data means
+An increase in the complexity and scale of biological data means
 biologists are increasingly required to develop the data skills needed
 to design reproducible workflows for the simulation, collection,
 organisation, processing, analysis and presentation of data. Developing
@@ -23,7 +23,7 @@ such data skills requires at least some coding, also known as scripting.
 This makes your work (everything you do with your raw data) explicitly
 described, totally transparent and completely reproducible. However,
 learning to code can be a daunting prospect for many biologists! That’s
-where an Reproducibility with R comes in!
+where Reproducibility with R comes in!
 
 R is a free and open source language especially well-suited to data
 analysis and visualisation and has a relatively inclusive and
@@ -34,15 +34,15 @@ programming.
 This workshop will introduce you to R and RStudio, the most widely used
 interface for working with R. You will learn how to import data,
 manipulate it, summarise it and plot it. You will learn how to use an
-organised project-oriented workflow with well-commented scripts so that
-you can understand your work in the future and share it with others. In
+organised project-oriented workflow with well commented scripts so that
+you can understand your work in the future, and share it with others. In
 addition, you will learn what a working directory and a file path are -
 these are key concepts in computing generally but ones which are often
 not taught to biologists.
 
 ## Philosophy and approach
 
-It is impossible to cover everything to you might ever need! Different
+It is impossible to cover everything you might ever need! Different
 people will use different methods and tools. Topics have been chosen
 because they are: foundational, widely applicable and transferable
 conceptually.
