--- a/materials/introduction-to-r-and-rstudio.qmd
+++ b/materials/introduction-to-r-and-rstudio.qmd
@@ -9,7 +9,6 @@ toc-location: right
 library(tidyverse)
 ```
 
-
 # Introduction
 
 -   Finding your way round RStudio
@@ -22,11 +21,11 @@ library(tidyverse)
 
 -   the panels
     -   Top left: Script - write and edit code and comments to keep
-    -  Bottom left: Console - where commands get executed and can be 
-       typed
+    -   Bottom left: Console - where commands get executed and can be
+        typed
     -   Top right: Environment - where you can see the objects you have
         created; History - of commands
-    -   Bottom right: Files - a file explorer; Plots; Packages; Help    
+    -   Bottom right: Files - a file explorer; Plots; Packages; Help\
 -   making yourself comfortable
 -   typing in the console sending commands
 -   using R as a calculator
@@ -38,15 +37,16 @@ library(tidyverse)
 -   functions `c()`
 -   types of R files: `.R`, `.RData` `.RHistory`
 
-
 ## Overview of demonstration
 
-There are several ways you can recap the demo at a later date:
+There are several ways you can *recap* the demo at a later date:
 
-🖼️ Refer to this infographic [Larger format](https://www-users.york.ac.uk/~er13/RStudio%20Anatomy.svg)
+🖼️ Refer to this infographic [Larger
+format](https://www-users.york.ac.uk/~er13/RStudio%20Anatomy.svg)
 ![infographic](https://www-users.york.ac.uk/~er13/RStudio%20Anatomy.svg){width="600"}
 
-📖 Read [First Steps in RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html)
+📖 Read [First Steps in
+RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html)
 
 📹 Watch
 
@@ -54,13 +54,11 @@ There are several ways you can recap the demo at a later date:
 
 {{< video https://youtu.be/2Ke1FGdaMSI >}}
 
-
 # Typing in data and plotting it
 
 🎬 We code together
 
 🛝 You try!
-
 
 ## The goal 🐈 plot
 
@@ -104,38 +102,35 @@ ggplot(data = coat_data,
   theme_classic()
 ```
 
-
 ## Getting set up
 
--   🎬  In RStudio do File | New project | New directory
-    Be purposeful about where you create it and name it. I 
-    suggest `cats-1`
+-   🎬 In RStudio do File \| New project \| New directory Be purposeful
+    about where you create it and name it. I suggest `cats-1`
 
--   🎬  Make a new script and save it as `type-data-and-plot.R` to carry out the 
-    rest of the work.  
-
+-   🎬 Make a new script and save it as `type-data-and-plot.R` to carry
+    out the rest of the work.
 
 ## Creating the data
 
 Start by making a vector called `coat` that holds coat colours
 
-🎬  Write the following in your script:
+🎬 Write the following in your script:
 
 ```{r}
 # coat colours
 coat <- c("black", "white", "tabby", "ginger", "tortoiseshell", "calico")
 ```
 
-The shortcut for `<-` is Alt+- (hold the Alt key down then hit
-the minus key ).
+The shortcut for `<-` is Alt+- (hold the Alt key down then hit the minus
+key ).
 
-Ensure your cursor is on the line with the command and do Control+Enter 
-to send the command to the console to be executed. 
+Ensure your cursor is on the line with the command and do Control+Enter
+to send the command to the console to be executed.
 
 I have used a comment. Comment your code as much as possible!
 
-🛝 Create a vector called `freq` containing the numbers of cats with each 
-coat colour
+🛝 Create a vector called `freq` containing the numbers of cats with
+each coat colour
 
 ```{r}
 #| code-fold: true
@@ -148,15 +143,15 @@ freq <- c(23, 15, 8, 10, 5, 1)
 
 ## Packages
 
-Commands like `c()` and `sum()` are in packages which are part
-the 'base' R system. A package is a collection of related commands. Base
+Commands like `c()` and `sum()` are in packages which are part the
+'base' R system. A package is a collection of related commands. Base
 packages are installed automatically when you install R.
 
 Other packages, such as **`ggplot2`** [@ggplot2] need to be *installed
 once*, and then *loaded each session*. **`ggplot2`** is one of the
 **`tidyverse`** [@tidyverse] packages.
 
-🎬  Load the **`tidyverse`**:
+🎬 Load the **`tidyverse`**:
 
 ```{r}
 #| eval: false
@@ -169,19 +164,19 @@ not be a problem for you.
 ## Plotting the data with `ggplot()`
 
 -   `ggplot()` takes a dataframe for an argument
--   We can make a dataframe of the two vectors, `coat` and `freq` 
-    using the `data.frame()` function.
+-   We can make a dataframe of the two vectors, `coat` and `freq` using
+    the `data.frame()` function.
 
-🎬  Make a dataframe called `coat_data`
+🎬 Make a dataframe called `coat_data`
 
 ```{r}
 coat_data <- data.frame(coat, freq)
 ```
 
-🎬  Click on `coat_data` in the Environment to open a spreadsheet-like 
+🎬 Click on `coat_data` in the Environment to open a spreadsheet-like
 view of it.
 
-🎬  Create a simple barplot using `ggplot` like this:
+🎬 Create a simple barplot using `ggplot` like this:
 
 ```{r}
 ggplot(data = coat_data, aes(x = coat, y = freq)) +
@@ -190,22 +185,20 @@ ggplot(data = coat_data, aes(x = coat, y = freq)) +
 
 -   `ggplot()` alone creates a blank plot.
 -   `ggplot(data = coat_data)` looks the same.
--   `aes()` gives the 'Aesthetic mappings'. How variables (columns) 
-    are mapped to visual properties (aesthetics) e.g., axes, colour, 
-    shapes.
--   Thus `ggplot(data = coat_data, aes(x = coat, y = freq))` produces 
-    a plot with axes
--   `geom_col`: A 'Geom' (Geometric object) gives the visual 
+-   `aes()` gives the 'Aesthetic mappings'. How variables (columns) are
+    mapped to visual properties (aesthetics) e.g., axes, colour, shapes.
+-   Thus `ggplot(data = coat_data, aes(x = coat, y = freq))` produces a
+    plot with axes
+-   `geom_col`: A 'Geom' (Geometric object) gives the visual
     representations of the data: points, lines, bars, boxplots etc.
 
 Note that `ggplot2` is the name of the package and `ggplot()` is its
 most important command.
 
-
 ## Using the help manual
 
-The manual tells us about a function. 'Arguments' can be added to 
-the `geom_col()` command inside the brackets.
+The manual tells us about a function. 'Arguments' can be added to the
+`geom_col()` command inside the brackets.
 
 Commands do something and their arguments (in brackets) and can specify:
 
@@ -213,8 +206,6 @@ Commands do something and their arguments (in brackets) and can specify:
 -   how exactly to do it
 
 Many arguments have defaults so you don't always need to supply them.
-
-
 
 🎬 Open the manual page for `geom_col()` using:
 
@@ -283,9 +274,8 @@ ggplot(data = coat_data, aes(x = coat, y = freq, fill = coat)) +
 Note that we have taken `fill = "lightblue"` out of the `geom_col()` and
 instead put `fill = coat` in the `aes()`.
 
-🛝 Use the manual to put the bars next to each
-other. Look for the argument that will mean there is no space between
-the bars.
+🛝 Use the manual to put the bars next to each other. Look for the
+argument that will mean there is no space between the bars.
 
 ```{r}
 #| code-fold: true
@@ -295,8 +285,8 @@ ggplot(data = coat_data, aes(x = coat, y = freq)) +
   geom_col(fill = "lightblue", width = 1)
 ```
 
-🛝 Use the manual to change the colour of the lines
-around each bar to black.
+🛝 Use the manual to change the colour of the lines around each bar to
+black.
 
 ```{r}
 #| code-fold: true
@@ -345,9 +335,9 @@ Make your code easier to read by using white space and new lines
 -   use a newline after every comma in a command with lots of arguments
 :::
 
-🛝 Look up `scale_x_discrete` in the manual and
-work out how to change the axis title from "coat" to "Coat colour". Also
-change the *y*-axis title.
+🛝 Look up `scale_x_discrete` in the manual and work out how to change
+the axis title from "coat" to "Coat colour". Also change the *y*-axis
+title.
 
 ```{r}
 #| code-fold: true
@@ -365,9 +355,8 @@ ggplot(data = coat_data, aes(x = coat, y = freq)) +
 
 ```
 
-🎬 I would prefer to see the *y*-axis extend a
-little beyond the data and we can change the axis "limits" in the
-`scale_y_continuous()`
+🎬 I would prefer to see the *y*-axis extend a little beyond the data
+and we can change the axis "limits" in the `scale_y_continuous()`
 
 ```{r}
 ggplot(data = coat_data, aes(x = coat, y = freq)) +
@@ -412,12 +401,11 @@ ggplot(data = coat_data, aes(x = coat, y = freq)) +
 
 ```
 
-
 # Importing data from files
 
-Typing in data is not practical when you have a lot of it. 
-Far more commonly, we import data from a file into R. This requires 
-you know two pieces of information.
+Typing in data is not practical when you have a lot of it. Far more
+commonly, we import data from a file into R. This requires you know two
+pieces of information.
 
 1.  What format the data are in
 
@@ -439,14 +427,11 @@ you know two pieces of information.
 [^3]: Plain text files can be opened in notepad or other similar editor
     and still be readable.
 
-We will first save our file for this workshop to our Project
-folder and read them in. Then we will then create a new
-folder inside our Project folder called `data-raw`, move the data file
-into it and read them in from there. This will allow you to see how the
-file paths need to be modified when a file is not in your *working
-directory*.
-
-
+We will first save our file for this workshop to our Project folder and
+read them in. Then we will then create a new folder inside our Project
+folder called `data-raw`, move the data file into it and read them in
+from there. This will allow you to see how the file paths need to be
+modified when a file is not in your *working directory*.
 
 ## The goal
 
@@ -467,24 +452,22 @@ ggplot(data = cats, aes(x = coat, y = mass)) +
 
 ```
 
-
 ## Getting set up
 
--   🎬  In RStudio do File | New project | New directory
-    Be purposeful about where you create it and name it. I 
-    suggest `cats-2`
+-   🎬 In RStudio do File \| New project \| New directory Be purposeful
+    about where you create it and name it. I suggest `cats-2`
 
--   🎬  Make a new script and save it as 
-    `import-data-and-summarise-plot.R`.  
+-   🎬 Make a new script and save it as
+    `import-data-and-summarise-plot.R`.
 
--   🎬  Save this file to your `cats-2` folder: The coat colour and 
-    mass of 62 cats - [cat-coats.csv](data-raw/cat-coats.csv)
+-   🎬 Save this file to your `cats-2` folder: The coat colour and mass
+    of 62 cats - [cat-coats.csv](data-raw/cat-coats.csv)
 
 ## Learning about working directories and paths
 
 ### Reading in data from the *Project* folder `cats-2`
 
-CSV files can be read read in with core **`tidyverse`** [@tidyverse] 
+CSV files can be read read in with core **`tidyverse`** [@tidyverse]
 functions.
 
 🎬 Load the packages
@@ -493,12 +476,12 @@ functions.
 library(tidyverse)
 ```
 
- A `.csv.` extension suggests this is plain text file with comma 
- separated columns. However, before we attempt to read it it, we
- should take a look at it. We can do this from RStudio
+A `.csv.` extension suggests this is plain text file with comma
+separated columns. However, before we attempt to read it it, we should
+take a look at it. We can do this from RStudio
 
-🎬 Go to the Files pane (bottom right), click on
-the `cat-coats.csv` file and choose View File[^4]
+🎬 Go to the Files pane (bottom right), click on the `cat-coats.csv`
+file and choose View File[^4]
 
 [^4]: **Do not** be tempted to import data this way. Unless you are
     careful, your data import will not be scripted or will not be
@@ -511,7 +494,7 @@ the `cat-coats.csv` file and choose View File[^4]
 cats <- read_csv("cat-coats.csv")
 ```
 
-The data from the file will be read into a dataframe called `cats` and 
+The data from the file will be read into a dataframe called `cats` and
 you will be able to see it in the Environment.
 
 ### Reading in data from a different folder
@@ -519,22 +502,19 @@ you will be able to see it in the Environment.
 To help you understand relative file paths, we will now move the data
 file.
 
-🎬 First remove the dataframes you just created to
-make it easier to see whether you can successfully read in the files
-from a different place:
+🎬 First remove the dataframes you just created to make it easier to see
+whether you can successfully read in the files from a different place:
 
 ```{r}
 #| eval: false
 rm(cats)
 ```
 
-🎬 Now make a new folder called `data-raw`. You can
-do this on the Files Pane by clicking New Folder and typing into the box
-that appears.
+🎬 Now make a new folder called `data-raw`. You can do this on the Files
+Pane by clicking New Folder and typing into the box that appears.
 
-🎬 Check the boxes next to the file names and
-choose More \| Move... and select the `data-raw` folder.
-
+🎬 Check the boxes next to the file names and choose More \| Move... and
+select the `data-raw` folder.
 
 The file will move. To import data from a file in the `data-raw` folder,
 you need to give the *relative path* to the file from the working
@@ -549,8 +529,7 @@ cats <- read_csv("data-raw/cat-coats.csv")
 
 ## Creating a boxplot
 
-
-🎬  Create a simple barplot using `ggplot` like this:
+🎬 Create a simple barplot using `ggplot` like this:
 
 ```{r}
 ggplot(data = cats, aes(x = coat, y = mass)) +
@@ -583,13 +562,13 @@ ggplot(data = cats, aes(x = coat, y = mass)) +
 
 ## 🧠 Core ideas
 
--   Assignment – Use <- to store values: x <- 5
+-   Assignment – Use \<- to store values: x \<- 5
 -   Vectors – One-dimensional data: `c(1, 2, 3)`
--   Data frames – Table-like structures: 
-    `data.frame(name = c("A", "B"))`  but made when data is imported
+-   Data frames – Table-like structures:
+    `data.frame(name = c("A", "B"))` but made when data is imported
 -   packages are loaded with `library()`
--   Use RStudio Projects and paths relative to the project folder
-    so your code is reproducible and portable
+-   Use RStudio Projects and paths relative to the project folder so
+    your code is reproducible and portable
 
 ## 📊 Plotting
 
@@ -599,8 +578,7 @@ ggplot(data = cats, aes(x = coat, y = mass)) +
 -   Scales – Adjust axes with `scale_*_continuous()` or
     `scale_*_discrete()`
 
-
-Pages made with R [@R-core], Quarto [@Allaire_Quarto_2024], `knitr` 
+Pages made with R [@R-core], Quarto [@Allaire_Quarto_2024], `knitr`
 [@knitr1; @knitr2; @knitr3], `kableExtra` [@kableExtra]
 
 # References
